--- a/GPCS_DMS/Views/Shared/_Layout.cshtml
+++ b/GPCS_DMS/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject IConfiguration Configuration
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -12,12 +13,23 @@
     <link rel="stylesheet" href="~/css/application/app-notification.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/application/app-dialog.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/application/app-loading.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css"/>
 
     @await RenderSectionAsync("Styles", required: false)
     <link href="~/css/devextreme/dx.light.css" rel="stylesheet" />
     <script src="~/js/devextreme/jquery.js"></script>
     <script src="~/js/devextreme/dx.all.js"></script>
     <script src="~/js/devextreme-license.js"></script>
+
+    <script>
+        window.APP_CONFIG = {
+            baseUrl: "@Configuration["ApiSettings:BaseUrl"]"
+        };
+
+        if(!window.APP_CONFIG.baseUrl){
+            console.error("API Base URL is not configured properly.");
+        };
+    </script>
 </head>
 <body>
     <header>
@@ -92,7 +104,7 @@
             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-
+    <script src="~/lib/font-awesome/js/all.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/application/app-core.js"></script>
     <script src="~/js/application/app-notification.js"></script>
