feat: Update New Material Items functionality with enhanced form handling and grid display

--- a/GPCS_DMS/Views/Home/Index.cshtml
+++ b/GPCS_DMS/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center">
-    <a asp-controller="Application" asp-action="SetApplicationType" asp-route-applicationType="NewMaterialsItems" class="btn btn-primary btn-lg mb-4">Create New Requisition</a>
+    <a asp-controller="Application" asp-action="SetApplicationType" asp-route-applicationType="NewMaterialsItems" asp-route-id="3" class="btn btn-primary btn-lg mb-4">Create New Requisition</a>
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
