--- a/GPCS_DMS/Views/Application/Requisition.cshtml
+++ b/GPCS_DMS/Views/Application/Requisition.cshtml
@@ -46,6 +46,12 @@
     <script src="~/js/application/form/app-form.new-material-item.js"></script>
     <script src="~/js/application/form/app-form.components.js"></script>
     <script src="~/js/application/form/app-form.js"></script>
+    <script src="~/js/application/grid/app-grid.columns.js"></script>
+    <script src="~/js/application/grid/app-grid.config.js"></script>
+    <script src="~/js/application/grid/app-grid.toolbar.js"></script>
+    <script src="~/js/application/grid/app-grid.delete.handler.js"></script>
+    <script src="~/js/application/grid/app-grid.new-item.js"></script>
+    <script src="~/js/application/grid/app-grid.new-material-item.js"></script>
     <script src="~/js/application/grid/app-grid.js"></script>
     <script src="~/js/application/app-button-handler.js"></script>
     <script src="~/js/application/app-button.js"></script>
