--- a/GPCS_DMS/Views/Home/Index.cshtml
+++ b/GPCS_DMS/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             appNotification.show("Warning! Check your input.", "warning", 7000);
             appNotification.show("Error occurred while loading data.", "error", 10000); *@
 
-            // Example usage of appDialog
+            @* // Example usage of appDialog
             const result = await appDialog.confirm({
                 title: "Please Confirm",
                 message: "Do you want to proceed with this action?",
@@ -51,7 +51,7 @@
                     message: "This is an important alert message.",
                     okText: "Got it"
                 });
-            }, 20000);
+            }, 20000); *@
         });
     </script>
 }
