feat: Refactor grid handling and validation logic
- Introduced GridHandler class to manage delete and input actions for grid items.
- Updated AppGrid class to utilize initial snapshots for tracking item changes.
- Enhanced NewItemsGridConfig and NewMaterialItemsGridConfig to use GridHandler.
- Added EditItemsGridConfig for editing item details with validation.
- Implemented AppValidation class for centralized validation rules.
- Updated toolbar functionality to include input selection and improved delete handling.
- Added new files for delete and edit item functionalities.

--- a/GPCS_DMS/Views/Application/Requisition.cshtml
+++ b/GPCS_DMS/Views/Application/Requisition.cshtml
@@ -37,6 +37,7 @@
 
 
 @section Scripts {
+    <script src="~/js/application/validate/app-validation.js"></script>
     <script src="~/js/application/app-header.popup.js"></script>
     <script src="~/js/application/app-header.js"></script>
     <script src="~/js/application/app-workflow.js"></script>
@@ -49,9 +50,11 @@
     <script src="~/js/application/grid/app-grid.columns.js"></script>
     <script src="~/js/application/grid/app-grid.config.js"></script>
     <script src="~/js/application/grid/app-grid.toolbar.js"></script>
-    <script src="~/js/application/grid/app-grid.delete.handler.js"></script>
+    <script src="~/js/application/grid/app-grid.handler.js"></script>
     <script src="~/js/application/grid/app-grid.new-item.js"></script>
     <script src="~/js/application/grid/app-grid.new-material-item.js"></script>
+    <script src="~/js/application/grid/app-grid.edit-item.js"></script>
+    <script src="~/js/application/grid/app-grid.delete-item.js"></script>
     <script src="~/js/application/grid/app-grid.js"></script>
     <script src="~/js/application/app-button-handler.js"></script>
     <script src="~/js/application/app-button.js"></script>
