--- a/GPCS_DMS/wwwroot/css/application/app-header.css
+++ b/GPCS_DMS/wwwroot/css/application/app-header.css
@@ -116,3 +116,19 @@
 .cell-changed:hover {
     background-color: #ffe69c !important;
 }
+
+.cell-alert{
+    background-color: #f8d7da !important;
+    border-left: 3px solid #dc3545 !important;
+    font-weight: 500 !important;
+}
+
+.cell-alert:hover {
+    background-color: #f1aeb1 !important;
+}
+
+.disabled-row {
+    opacity: 0.5;
+    background-color: #f5f5f5;
+    cursor: not-allowed;
+}
